2003-08-14 John Fleck <jfleck@inkstain.net>

	* *.xml
	finish conversion to xinclude, many edits
	

2003-08-09 John Fleck <jfleck@inkstain.net>

	* release-notes.xml
	* rnepiphany.xml
	add epiphany section

2003-08-05 John Fleck <jfleck@inkstain.net>

	* release-notes.xml
	* rndesktop.xml
	add Nautilus and panel sections, begin conversion to
	use xinclude for the included files

2003-08-02 John Fleck <jfleck@inkstain.net>

	* release-notes.xml
	first pass at new big picture theme stuff
	