@@ -1,0 +1,44 @@
+<?xml version="1.0"?>
+<!DOCTYPE sect2 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
+"http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
+<!ENTITY version "2.4.0">
+<!ENTITY urlfiguresbase "../figures/">
+]>
+<sect2 id="rngcalctool">
+  <title>Gcalctool</title>
+  <para>GNOME &version; includes <application>Gcalctool</application>, a new
+    version of the venerable <application>Calctool</application> calculator
+    originally released to comp.sources.unix in the late
+    1980's. <application>Gcalctool</application> replaces the <application>GNOME
+      Calculator</application>, which used to be included in the
+  <application>gnome-utils</application> package.</para>
+
+<!--    
+    <figure id="rnegcalctoolscreenshot"> 
+        <title>Gcalctool</title> 
+        <screenshot> 
+        <mediaobject> 
+          <imageobject><imagedata fileref="&urlfiguresbase;gcalctoolscreenshot.png"
+			format="PNG"/> 
+          </imageobject>
+ 	  <textobject> 
+ 	    <phrase>Gcalctool calculator
+            </phrase> 
+          </textobject> 
+        </mediaobject> 
+	</screenshot> 
+      </figure> 
+-->
+  <para>Gcalctool has Basic, Financial and Scientific modes. Calculations are
+ 	    performed from left to right, with no arithmetic precedence. If you
+ 	    need arithmetic precedence, then you should use parentheses. Basic
+ 	    Mode provides standard calculator functions. You can store numbers
+ 	    in 10 different memory registers, and easily retrieve and replace
+ 	    the numbers in the memory registers. Basic Mode is the default
+ 	    mode. You can use all of the Basic Mode functions in each of the
+ 	    other modes. Financial Mode provides several complex financial
+ 	    functions. Scientific Mode provides many additional mathematical
+ 	    functions, including trigonometric and logical functions. You can
+ 	    also store your own functions and constants, when you use Scientific
+ 	    Mode.</para>
+</sect2>
