@@ -1,0 +1,34 @@
+<?xml version="1.0"?>
+<!DOCTYPE sect2 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
+"http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
+<!ENTITY version "2.4.0">
+<!ENTITY urlfiguresbase "../figures/">
+]>
+<sect2 id="rngucharmap">
+  <title>Gucharmap</title>
+  <para>Written by Noah Levitt, <application>Gucharmap</application> is a
+  full-featured unicode character picker. It allows users access to the full
+  array of unicode characters, allowing you to paste them into another
+  application when they are unavailable directly through the keyboard.
+
+<!--    
+    <figure id="rngucharmapscreenshot"> 
+        <title>Gucharmap</title> 
+        <screenshot> 
+        <mediaobject> 
+          <imageobject><imagedata fileref="&urlfiguresbase;gucharmapscreenshot.png"
+			format="PNG"/> 
+          </imageobject>
+ 	  <textobject> 
+ 	    <phrase>Gucharmap Unicode Character Picker
+            </phrase> 
+          </textobject> 
+        </mediaobject> 
+	</screenshot> 
+      </figure> 
+-->
+  </para>
+  <para><application>Gucharmap</application> replaces
+    <application>gnome-character-map</application>, which was included in the
+    <application>gnome-utils</application> package.</para>
+</sect2>
