@@ -1,0 +1,34 @@
+<?xml version="1.0"?>
+<!DOCTYPE sect2 PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
+"http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
+<!ENTITY version "2.4.0">
+<!ENTITY urlfiguresbase "../figures/">
+]>
+<sect2 id="rnzenity">
+  <title>Zenity</title>
+  <para>Written by Glynn Foster, <application>Zenity</application> is a new
+    dialog creation tool that can be used to provide user input dialogs in shell
+    scripts. It replaces <application>gdialog</application>, which was included
+    in the <application>gnome-utils</application>
+    package. <application>Zenity's</application> functionality is based on the
+    <application>dialog</application> application.
+
+<!--    
+    <figure id="rnzenityscreenshot"> 
+        <title>Zenity</title> 
+        <screenshot> 
+        <mediaobject> 
+          <imageobject><imagedata fileref="&urlfiguresbase;zenityscreenshot.png"
+			format="PNG"/> 
+          </imageobject>
+ 	  <textobject> 
+ 	    <phrase>Zenity Dialog Creator
+            </phrase> 
+          </textobject> 
+        </mediaobject> 
+	</screenshot> 
+      </figure> 
+-->
+  </para>
+
+</sect2>
