@@ -1,3 +1,12 @@
+2003-08-17 John Fleck <jfleck@inkstian.net>
+
+	added:
+	* rngcalctool.xml
+	* rngpdf.xml
+	* rngucharmap.xml
+	* rnzenity.xml
+	various other edits
+
 2003-08-14 John Fleck <jfleck@inkstain.net>
 
 	* *.xml
